trying to access Krux retrieve function.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <body>
         <script class="kxint" data-namespace="trademe">
             window.Krux||((Krux=function(){Krux.q.push(arguments);}).q=[]);
-            (function(){
+            //(function(){
               function retrieve(n){
                 var k= 'kx'+'trademe_'+n, ls=(function(){
                   try {
@@ -48,7 +48,7 @@
               }
             Krux.user = retrieve('user');
             //   Krux.segments = retrieve('segs') ? retrieve('segs').split(',') : [];
-            })();
+            //})();
         </script>
         <script>
             // (function () {
