--- a/index.html
+++ b/index.html
@@ -2,22 +2,24 @@
     <head>
         <title>Control Tag</title>
         <!-- BEGIN ControlTag for "Trade Me" -->
-        <!-- <script async class="kxct" data-id="J7iwbVZL" data-timing="async" data-version="3.0">
+        <!-- <script async class="kxct" data-id="J6xELiDv" data-timing="async" data-version="3.0">
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
                 var k=document.createElement('script');k.type='text/javascript';k.async=true;
                 k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J7iwbVZL.js';
                 var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
             }());
+            //prod: J6xELiDv
+            //test: J7iwbVZL
         </script> -->
         <!-- END ControlTag -->
-        <script class="kxct" data-id="J7iwbVZL" data-timing="async" data-version="3.0" type="text/javascript">
+        <script class="kxct" data-id="J6xELiDv" data-timing="async" data-version="3.0" type="text/javascript">
             //adding script
             console.log('adding control tag script');
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
             var k=document.createElement('script');k.type='text/javascript';k.async=true;
-            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J7iwbVZL.js';
+            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J6xELiDv.js';
             var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
             }());
         </script>
