--- a/index.html
+++ b/index.html
@@ -29,30 +29,29 @@
     </head>
     <body>
         <script class="kxint" data-namespace="trademe">
-            window.Krux||((Krux=function(){Krux.q.push(arguments);}).q=[]);
-            //(function(){
-              function retrieve(n){
-                var k= 'kx'+'trademe_'+n, ls=(function(){
-                  try {
-                    return window.localStorage;
-                  } catch(e) {
-                    return null;
-                  }
-                })();
-                if (ls) {
-                    return ls[k] || '';
-                } else if (navigator.cookieEnabled) {
-                    var m = document.cookie.match(k+'=([^;]*)');
-                    return (m && unescape(m[1])) || '';
-                } else {
-                    return '';
-                }
-              }
+            // window.Krux||((Krux=function(){Krux.q.push(arguments);}).q=[]);
+            // //(function(){
+            //   function retrieve(n){
+            //     var k= 'kx'+'trademe_'+n, ls=(function(){
+            //       try {
+            //         return window.localStorage;
+            //       } catch(e) {
+            //         return null;
+            //       }
+            //     })();
+            //     if (ls) {
+            //         return ls[k] || '';
+            //     } else if (navigator.cookieEnabled) {
+            //         var m = document.cookie.match(k+'=([^;]*)');
+            //         return (m && unescape(m[1])) || '';
+            //     } else {
+            //         return '';
+            //     }
+            //   }
              //Krux.user = retrieve('user');
                //Krux.segments = retrieve('segs') ? retrieve('segs').split(',') : [];
             //})();
-              </script>
-              <script>
+             
             // (function () {
             //     var parentWindow = window.document.location.ancestorOrigins[0];
             //     if (parentWindow.includes('trademe.co.nz')) {
@@ -132,28 +131,31 @@
                 if (!memberIdSent) {
                     memberIdSent = true;
                     console.log('sending id now');
-                   // window.Krux||((Krux=function(){Krux.q.push(arguments);}).q=[]);
-                    //(function(){
-                        // function retrieve(n){
-                        //     var k= 'kx'+'trademe_'+n, ls=(function(){
-                        //     try {
-                        //         return window.localStorage;
-                        //     } catch(e) {
-                        //         return null;
-                        //     }
-                        //     })();
-                        //     if (ls) {
-                        //         return ls[k] || '';
-                        //     } else if (navigator.cookieEnabled) {
-                        //         var m = document.cookie.match(k+'=([^;]*)');
-                        //         return (m && unescape(m[1])) || '';
-                        //     } else {
-                        //         return '';
-                        //     }
+
+                    /////
+                    window.Krux||((Krux=function(){Krux.q.push(arguments);}).q=[]);
+                    (function(){
+                        function retrieve(n){
+                            var k= 'kx'+'trademe_'+n, ls=(function(){
+                            try {
+                                return window.localStorage;
+                            } catch(e) {
+                                return null;
+                            }
+                            })();
+                            if (ls) {
+                                return ls[k] || '';
+                            } else if (navigator.cookieEnabled) {
+                                var m = document.cookie.match(k+'=([^;]*)');
+                                return (m && unescape(m[1])) || '';
+                            } else {
+                                return '';
+                            }
                             Krux.user = retrieve('user');
                             Krux.segments = retrieve('segs') ? retrieve('segs').split(',') : [];
-                        // }
-                    //}());
+                        }
+                    }());
+                    //////////
                     
                     sendAudienceSegmentsToSite();
                 }
