--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 // END AJAX ControlTag
                 ////
 
-                sendAudienceSegmentsToSite();
+                // sendAudienceSegmentsToSite();
             }
 
         
