--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
             //test: J7iwbVZL
         </script> -->
         <!-- END ControlTag -->
-        <script class="kxct" data-id="J6xELiDv" data-timing="async" data-version="3.0" type="text/javascript">
+        <script class="kxct" data-id="J7iwbVZL" data-timing="async" data-version="3.0" type="text/javascript">
             //adding script
             console.log('adding control tag script');
             window.Krux||((Krux=function(){Krux.q.push(arguments)}).q=[]);
             (function(){
             var k=document.createElement('script');k.type='text/javascript';k.async=true;
-            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J6xELiDv.js';
+            k.src=(location.protocol==='https:'?'https:':'http:')+'//cdn.krxd.net/controltag/J7iwbVZL.js';
             var s=document.getElementsByTagName('script')[0];s.parentNode.insertBefore(k,s);
             }());
         </script>
         <script>
-            //window.dataLayer = [{'gtm.start': 1573601241034, 'event': 'gtm.js', 'gtm.uniqueEventId': 0},{'gtm.start': 1573601241034, 'event': 'gtm.js', 'gtm.uniqueEventId': 0},{"userId":"Ur8KXZ0VdhtNcMZeYo/i5KRBFNR4FFG6oVbhRJFO7HQ===","frendVersion":"4cbe6bd8d44e","gtm.uniqueEventId":2},{"categoryLevel1":"trade-me-property","categoryLevel2":"residential","categoryLevel3":"for-sale","category":"/Trade-Me-Property/Residential/For-Sale","canonicalPath":"/property/residential/sale/waikato/hamilton/frankton/listing/1809228979","vertical":"property","name":"Residential for sale","id":1809228979,"mcat":"0350-5748-3399-","auctionOrClassified":"classified","region":"Waikato","district":"Hamilton","isClosed":"false","sellerRegion":"Auckland","sellerDistrict":"Manukau","sellerInTrade":"false","hasPhotos":"true","hasVideo":"false","newOrUsed":"used","hasBuyNow":"false","hasPayNow":"false","freeShipping":"false","mustPickUp":"false","url":"/property/residential/sale/waikato/hamilton/frankton/listing/1809228979","event":"pageView","userId":"","frendVersion":"4cbe6bd8d44e","gtm.uniqueEventId":5},{"event":"gtm.dom","gtm.uniqueEventId":9},{"event":"gtm.load","gtm.uniqueEventId":12}];
+            window.dataLayer = [{'gtm.start': 1573601241034, 'event': 'gtm.js', 'gtm.uniqueEventId': 0},{'gtm.start': 1573601241034, 'event': 'gtm.js', 'gtm.uniqueEventId': 0},{"userId":"Ur8KXZ0VdhtNcMZeYo/i5KRBFNR4FFG6oVbhRJFO7HQ===","frendVersion":"4cbe6bd8d44e","gtm.uniqueEventId":2},{"categoryLevel1":"trade-me-property","categoryLevel2":"residential","categoryLevel3":"for-sale","category":"/Trade-Me-Property/Residential/For-Sale","canonicalPath":"/property/residential/sale/waikato/hamilton/frankton/listing/1809228979","vertical":"property","name":"Residential for sale","id":1809228979,"mcat":"0350-5748-3399-","auctionOrClassified":"classified","region":"Waikato","district":"Hamilton","isClosed":"false","sellerRegion":"Auckland","sellerDistrict":"Manukau","sellerInTrade":"false","hasPhotos":"true","hasVideo":"false","newOrUsed":"used","hasBuyNow":"false","hasPayNow":"false","freeShipping":"false","mustPickUp":"false","url":"/property/residential/sale/waikato/hamilton/frankton/listing/1809228979","event":"pageView","userId":"","frendVersion":"4cbe6bd8d44e","gtm.uniqueEventId":5},{"event":"gtm.dom","gtm.uniqueEventId":9},{"event":"gtm.load","gtm.uniqueEventId":12}];
         </script>
     </head>
     <body>
@@ -131,19 +131,19 @@
             }
 
         
-            function sendAudienceSegmentsToSite() {
-                console.log("sending segments back");
-                var parentWindow = window.document.location.ancestorOrigins[0];
-                if (parentWindow.includes('trademe.co.nz')) {
-                    let intervalID = setInterval(() => {
-                        if (Krux.segments.length == 0) {
-                            return;
-                        }
-                        clearInterval(intervalID);
-                        parent.postMessage(Krux.segments, parentWindow);
-                    }, 500);
-                }
-            }
+            // function sendAudienceSegmentsToSite() {
+            //     console.log("sending segments back");
+            //     var parentWindow = window.document.location.ancestorOrigins[0];
+            //     if (parentWindow.includes('trademe.co.nz')) {
+            //         let intervalID = setInterval(() => {
+            //             if (Krux.segments.length == 0) {
+            //                 return;
+            //             }
+            //             clearInterval(intervalID);
+            //             parent.postMessage(Krux.segments, parentWindow);
+            //         }, 500);
+            //     }
+            // }
 
 
             //sending event data when user interacts with a tool
